--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "intra-native",
+  "name": "in42",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,12 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "42.js": "^1.2.5",
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@types/react": "~18.0.27",
-    "42.js": "^1.2.5",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "base-64": "^1.0.0",
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/react-native": "^0.72.2",
     "tailwindcss": "^3.3.2"
   },
   "private": true
